samples/_failures_safe/1761183148_71d86d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_538a0a83.c: In function ‘main’:
./samples/SAFE/__tmp_538a0a83.c:158:17: error: expected expression at end of input
  158 |                 } else if (status == 0)
      |                 ^
./samples/SAFE/__tmp_538a0a83.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_538a0a83.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_538a0a83.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_538a0a83.c:158:17: error: expected declaration or statement at end of input
